--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,11 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: https://github.com/lucarioams
+  github: lucarioams
   instagram:
-  linkedin: https://www.linkedin.com/in/lucacosivi/
+  linkedin: lucacosivi
   pinterest:
-  rss: 
+  rss: luca.cosivi@hey.com
   twitter: lucarioams
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
