--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ footer-links:
   instagram:
   linkedin: lucacosivi
   pinterest:
-  rss: luca.cosivi@hey.com
+  rss:
   twitter: lucarioams
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
